--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ body {
         padding: 100px 2%;
         flex-direction: column;
         text-align: center;
+        overflow: hidden;
         gap: 5rem;
     }
 
